<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_marginLeft="60dp"
    android:layout_marginRight="60dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/lyt_forgot_dialog"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_code"
            android:textColor="@color/colorBlue"
            android:textSize="16dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"/>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/signup_input_style"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/edit_alert_verify"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@null"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:inputType="numberDecimal"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp">
            <Button
                android:id="@+id/btn_back"
                android:layout_marginRight="20dp"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_login"
                android:text="@string/btn_back"
                android:textColor="@color/colorBlue"
                android:textSize="14dp"
                android:layout_gravity="center_horizontal"
                />

            <Button
                android:id="@+id/btn_verify"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_login"
                android:text="@string/verify"
                android:textColor="@color/colorBlue"
                android:textSize="14dp"
                android:layout_gravity="center_horizontal"
               />
        </LinearLayout>

    </LinearLayout>



</LinearLayout>